--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="google-adsense-account" content="ca-pub-1508109246096690">
     <meta name="google-site-verification" content="KMUJp7ARNYzoPKq369Ld19KnejwlEwXdOXSqTckfVW8" />
+    <meta name="coinzilla" content="4eaf9ca960c3b9a4e7398bfe288d3262" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Track upcoming dividend payments for TSX-listed stocks with real-time updates">
     <meta name="keywords" content="TSX dividends, Canadian stocks, dividend tracker, stock dividends, ex-dividend dates">
@@ -188,5 +189,6 @@
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script type="text/javascript"> var infolinks_pid = 3438449; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
